--- a/src/HOCs/withCenterFormatting/withCenterFormatting.scss
+++ b/src/HOCs/withCenterFormatting/withCenterFormatting.scss
@@ -1,11 +1,11 @@
 @import '../../styles/breakpoints.scss';
 
 .with-title {
-    padding-top: 7rem !important;
+    // padding-top: 7rem !important;
     background: white;
-    @include desktop-up {
-        min-height: 100vh;
-        padding-top: 10rem !important;
-        padding-bottom: 10rem !important;
-    }
+    // @include desktop-up {
+    //     min-height: 100vh;
+    //     padding-top: 10rem !important;
+    //     padding-bottom: 10rem !important;
+    // }
 }
